// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageSelector Rendering should match snapshot with image 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#ece7df",
        "borderColor": "#c8ced0",
        "borderRadius": 12,
        "borderWidth": 2,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
    testID="image-selector-container"
  >
    <Image
      resizeMode="cover"
      source={
        {
          "uri": "file:///test/image.jpg",
        }
      }
      style={
        {
          "height": "100%",
          "width": "100%",
        }
      }
      testID="selected-image"
    />
  </View>
</View>
`;

exports[`ImageSelector Rendering should match snapshot with no image 1`] = `
<View
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#ece7df",
        "borderColor": "#c8ced0",
        "borderRadius": 12,
        "borderWidth": 2,
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
        "width": "100%",
      }
    }
    testID="image-selector-container"
  >
    <View
      style={
        {
          "alignItems": "center",
          "gap": 12,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        camera
      </Text>
      <Text
        style={
          {
            "color": "#181b1b",
            "fontSize": 16,
            "fontWeight": "600",
          }
        }
      >
        Add Photo
      </Text>
      <Text
        style={
          {
            "color": "#778588",
            "fontSize": 14,
          }
        }
      >
        Tap to upload
      </Text>
    </View>
  </View>
</View>
`;
